--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -10,16 +10,12 @@ body{
 }
 
 h1{
-  letter-spacing: 1.2rem;
-  font: size 2rem; 
+  letter-spacing: 1.2em;
+  font-size: 2rem; 
   text-shadow: 1px 1px 2px plum;
 
-  // <uniquifier>: Use a unique and descriptive class name
-// <weight>: Use a value from 100 to 700
-
 .josefin-sans-<uniquifier> {
-  font-family: "Josefin Sans", sans-serif;// <uniquifier>: Use a unique and descriptive class name
-  // <weight>: Use a value from 100 to 700
+  font-family: "Josefin Sans", sans-serif;
   
   .josefin-sans-<uniquifier> {
     font-family: "Josefin Sans", sans-serif;
